--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
 		<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
 	</head>
 	<body>
-		<section id="todoapp_id" class="todoapp">
+		<section class="todoapp">
 			<header class="header">
 				<h1>todos</h1>
-				<input id="todo_input" class="new-todo" placeholder="What needs to be done?" autofocus>
+				<input class="new-todo" placeholder="What needs to be done?" autofocus>
 			</header>
-			<section id="main_section" class="main">
+			<!-- This section should be hidden by default and shown when there are todos -->
+			<section class="main">
 				<input id="toggle-all" class="toggle-all" type="checkbox">
 				<label for="toggle-all">Mark all as complete</label>
-				<ul id="todolist_id" class="todo-list"></ul>
+				<ul class="todo-list"></ul>
 			</section>
-			<footer id="footer_id" class="footer">
+			<footer class="footer">
+				<!-- This should be `0 items left` by default -->
 				<span class="todo-count"><strong>0</strong> item left</span>
+				<!-- Remove this if you don't implement routing -->
 				<ul class="filters">
 					<li>
 						<a class="selected" href="#/">All</a>
@@ -31,16 +34,16 @@
 						<a href="#/completed">Completed</a>
 					</li>
 				</ul>
-				<button id="clear_id" class="clear-completed">Clear completed</button>
+				<!-- Hidden if no completed items are left ↓ -->
+				<button class="clear-completed">Clear completed</button>
 			</footer>
 		</section>
 		<footer class="info">
 			<p>Double-click to edit a todo</p>
-			<!-- Remove the below line ↓ -->
-			<p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
-			<p>Created by <a href="http://todomvc.com">Stefan Höck</a></p>
+			<p>Created by <a href="https://github.com/stefan-hoeck/idris2-todomvc">Stefan Höck</a></p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
+		<!-- Scripts here. Don't remove ↓ -->
 		<script src="node_modules/todomvc-common/base.js"></script>
 		<script src="js/app.js"></script>
 	</body>
