most of the functionality is there

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 		<section class="todoapp">
 			<header class="header">
 				<h1>todos</h1>
-				<input class="new-todo" placeholder="What needs to be done?" autofocus>
+				<input id="new-todo" class="new-todo" placeholder="What needs to be done?" autofocus>
 			</header>
 			<!-- This section should be hidden by default and shown when there are todos -->
-			<section class="main">
+			<section id="main" class="main">
 				<input id="toggle-all" class="toggle-all" type="checkbox">
 				<label for="toggle-all">Mark all as complete</label>
-				<ul class="todo-list"></ul>
+				<ul id="todo-list" class="todo-list"></ul>
 			</section>
-			<footer class="footer">
+			<footer id="footer" class="footer">
 				<!-- This should be `0 items left` by default -->
-				<span class="todo-count"><strong>0</strong> item left</span>
+				<span id="todo-count" class="todo-count"><strong>0</strong> item left</span>
 				<!-- Remove this if you don't implement routing -->
 				<ul class="filters">
 					<li>
@@ -35,7 +35,7 @@
 					</li>
 				</ul>
 				<!-- Hidden if no completed items are left ↓ -->
-				<button class="clear-completed">Clear completed</button>
+				<button id="clear-completed" class="clear-completed">Clear completed</button>
 			</footer>
 		</section>
 		<footer class="info">
