--- a/index.html
+++ b/index.html
@@ -13,28 +13,24 @@
 				<h1>todos</h1>
 				<input id="new-todo" class="new-todo" placeholder="What needs to be done?" autofocus>
 			</header>
-			<!-- This section should be hidden by default and shown when there are todos -->
 			<section id="main" class="main">
 				<input id="toggle-all" class="toggle-all" type="checkbox">
 				<label for="toggle-all">Mark all as complete</label>
 				<ul id="todo-list" class="todo-list"></ul>
 			</section>
 			<footer id="footer" class="footer">
-				<!-- This should be `0 items left` by default -->
 				<span id="todo-count" class="todo-count"><strong>0</strong> item left</span>
-				<!-- Remove this if you don't implement routing -->
 				<ul class="filters">
 					<li>
-						<a class="selected" href="#/">All</a>
+						<a id="sel-all" class="selected" href="#/">All</a>
 					</li>
 					<li>
-						<a href="#/active">Active</a>
+						<a id="sel-active" href="#/active">Active</a>
 					</li>
 					<li>
-						<a href="#/completed">Completed</a>
+						<a id="sel-completed" href="#/completed">Completed</a>
 					</li>
 				</ul>
-				<!-- Hidden if no completed items are left ↓ -->
 				<button id="clear-completed" class="clear-completed">Clear completed</button>
 			</footer>
 		</section>
